fixed overflow issue with mobile nav

--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -216,10 +216,11 @@
     .MobileNavContainer{
         display: flex;
         flex-direction: column;
-        width: 100vw;
+        width: 100%;
         height: 100%;
         margin: 0;
         justify-content: space-between;
+        position: relative;
     }
 
     .MobileNavFirstRow{
